// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - features - LN-nota - share - _children - Divider Snapshot tests should match snapshot with default variant (horizontal) 1`] = `
<DocumentFragment>
  <hr
    class="l-none vertical mx-16 border border-2"
  />
  <hr
    class="l-only my-16 border border-2"
  />
</DocumentFragment>
`;

exports[`components - features - LN-nota - share - _children - Divider Snapshot tests should match snapshot with vertical variant 1`] = `
<DocumentFragment>
  <hr
    class="vertical mx-16 border border-2"
  />
</DocumentFragment>
`;
